# replica-inpc-mx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: canasta_demo.csv  notebook_demo.ipynb  series_demo.csv
docs/: analisis_requerimientos.md  contexto_inpc.md  diseño.md  diseñov2.md  metodologia_inegi.md  metodologia_replica.md  rediseño.md  requerimientos.md  uso.md
docs/rediseño/: api.md  aplicacion.md  dominio.md  rediseño.md  transiscion.md
guias/: obtener_ponderadores.md  obtener_series.md
src/replica_inpc/: __init__.py
tests/_legacy/: legacy_test_api_validacion_variaciones.py  legacy_test_combinar.py  legacy_test_conversion.py  legacy_test_encadenado.py  legacy_test_estrategia.py  legacy_test_laspeyres.py  legacy_test_rellenar_faltantes.py  legacy_test_validacion_inpc.py  legacy_test_validar_mensual.py  legacy_test_validar_quincenal_resultado.py
tests/integration/: test_almacen_artefactos_fs.py  test_api_flujos.py  test_escritor_resultados_csv.py  test_fuente_validacion_api.py  test_lector_canasta_csv.py  test_lector_series_csv.py  test_repositorio_corridas_fs.py
tests/unit/: test_api_config.py  test_api_exports.py  test_api_incidencias.py  test_api_indices.py  test_api_insumos.py  test_api_periodos.py  test_api_validacion.py  test_api_validacion_variaciones.py  test_api_validaciones.py  test_api_variaciones.py  test_calcular_historia.py  test_calculo_estrategia.py  test_calculo_faltantes.py  test_calculo_laspeyres_directo.py  test_calculo_laspeyres_encadenado.py  test_calculo_subindices.py  test_combinar.py  test_consulta_incidencias.py  test_consulta_variaciones.py  test_conversion.py  test_correspondencia.py  test_encadenado.py  test_estrategia.py  test_incidencias.py  test_indice_incidencia.py  test_laspeyres.py  test_modelos_base.py  test_modelos_incidencia.py  test_modelos_indice.py  test_modelos_validacion.py  test_modelos_variacion.py  test_periodos.py  test_rellenar_faltantes.py  test_resultado.py  test_subindices.py  test_validacion_inpc.py  test_validar_incidencias.py  test_validar_indices.py  test_validar_mensual.py  test_validar_quincenal_resultado.py  (+2 more)
tools/: generar_canasta.py  uso_generar_canasta.md
(+96 files in other folders)
