[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replica-inpc-mx"
version = "0.1.0"
description = "Replicación del INPC general de México a partir de series y canastas publicadas por el INEGI"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "requests>=2.32",
    "python-dateutil>=2.9.0",
    "plotnine>=0.15.3",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ipython>=8.38.0",
    "jupyter",
    "ipykernel>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
